Add archive API skeleton (#31)
