# toc/api/swagger.yaml
@@ -362,7 +362,7 @@ paths:
           schema:
             $ref: "#/definitions/ApiResponse"
   /logs:
-    get:
+    post:
       tags:
       - "log"
       summary: "Export logs"
@@ -394,6 +394,107 @@ paths:
             $ref: "#/definitions/ApiResponse"
         "503":
           description: "Service unavailable"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+  /archives:
+    get:
+      tags:
+      - "archive"
+      summary: "Query archive info"
+      description: "Retrieve progress, information and state of all archives"
+      operationId: "getArchive"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        "200":
+          description: "Archive info retrieved"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Archive"
+        "403":
+          description: "Forbidden from querying archive info"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "404":
+          description: "Archive not found"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "405":
+          description: "Bad request"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "500":
+          description: "TOC controller error"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "503":
+          description: "Service unavailable"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+    post:
+      tags:
+      - "archive"
+      summary: "Archive data"
+      description: "Create a ZIP archive of backup snapshot data"
+      operationId: "archiveData"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        "200":
+          description: "Data archived"
+          schema:
+            $ref: "#/definitions/Archive"
+        "403":
+          description: "Forbidden from archiving data"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "404":
+          description: "Data not found"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "405":
+          description: "Bad request"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "500":
+          description: "TOC controller error"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "503":
+          description: "Service unavailable"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+  /archives/{archiveId}:
+    get:
+      tags:
+      - "archive"
+      summary: "Find archive by ID"
+      description: "Query a single archive"
+      operationId: "getArchiveById"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "archiveId"
+        in: "path"
+        description: "ID of archive to return"
+        required: true
+        type: "integer"
+        format: "int64"
+        x-exportParamName: "ArchiveId"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Archive"
+        "400":
+          description: "Invalid ID supplied"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        "404":
+          description: "Archive not found"
           schema:
             $ref: "#/definitions/ApiResponse"
 definitions:
@@ -546,8 +647,12 @@ definitions:
         - "in-progress"
         - "completed"
         - "failed"
-      xml: {}
-      example: {}
+    xml:
+      name: "Synchronization"
+    example:
+      id: 1
+      time: "20241231T235959Z"
+      status: "in-progress"
   Quota:
     type: "object"
     properties:
@@ -562,15 +667,13 @@ definitions:
       hard:
         type: "integer"
         format: "int64"
-      xml: {}
-      example: {}
+    xml:
+      name: "Synchronization"
     example:
-      path: "path"
-      xml: ""
-      id: 0
-      hard: 1
-      soft: 6
-      example: ""
+      id: 1
+      path: "/home/toc/"
+      soft: 838860800
+      hard: 1073741824
   Log:
     type: "object"
     properties:
@@ -590,15 +693,13 @@ definitions:
         - "failed"
       url:
         type: "string"
-      xml: {}
-      example: {}
+    xml:
+      name: "Log"
     example:
-      xml: ""
-      id: 0
-      time: "2000-01-23T04:56:07.000+00:00"
-      url: "url"
-      status: "queued"
-      example: ""
+      id: 1
+      time: "20241231T235959Z"
+      status: "completed"
+      url: "/static/logs-20240910T064100Z.zip"
   Archive:
     type: "object"
     properties:
@@ -618,8 +719,13 @@ definitions:
         - "failed"
       url:
         type: "string"
-      xml: {}
-      example: {}
+    xml:
+      name: "Archive"
+    example:
+      id: 1
+      time: "20241231T235959Z"
+      status: "pending"
+      url: "/archives/1"
 externalDocs:
   description: "Find out more about TOC"
   url: "https://github.com/gyk4j/toc"
